コメントアウト〜！

--- a/app/views/mypages/card.html.haml
+++ b/app/views/mypages/card.html.haml
@@ -1,3 +1,6 @@
+
+-# このファイルはクレジットカードを登録するための画面です
+
 %body
 
 .header-a
@@ -56,3 +59,13 @@
   = render "sidebar"
 
 = render "/homes/footer"
+
+
+
+
+
+
+
+
+
+
