修正　ハッシュロケット、オレンジ

--- a/app/assets/stylesheets/mypages/creditcard.scss
+++ b/app/assets/stylesheets/mypages/creditcard.scss
@@ -44,16 +44,14 @@
   .pay-informartion {
     position: relative;
     border-bottom: 1px solid #f5f5f5;
-    .pay-informartion__title {
-      }
     .pay-informartion__list {
       margin-top: 20px;
       .delete-btn {
         position: absolute;
         top: 40px;
         right: 0px;
-        color: orange;
-        border: 1px solid orange;
+        color: $red;
+        border: 1px solid $red;
         border-radius: 4px;
         box-sizing: border-box;
         padding: 5px;
