--- a/app/views/mypages/card.html.haml
+++ b/app/views/mypages/card.html.haml
@@ -17,7 +17,7 @@
           -# = f.label :"カード番号"
           %h4 カード番号
           %span.min #{required}
-          %input.input-text_cardnum{:name => "cardnumber", :placeholder => "半角数字のみ", :value => ""}/
+          %input.input-text_cardnum{name:  "cardnumber", placeholder: "半角数字のみ", value: ""}/
           %div
             =image_tag "visa.svg", height: '20', width: '40'
             =image_tag "master-card.svg", height: '20', width: '40'
@@ -35,11 +35,11 @@
           %span.min #{required}
           -# .field-input
         .field-input-expiring
-          %input.input-text{:name => "expiring date", :placeholder => "--", :value => ""}/
+          %input.input-text{name: "expiring date", placeholder: "--", value: ""}/
           -# = f.text_field :
           -# spanはform_for切り替え時にセレクトの横に移動すると思います
           %span 月
-          %input.input-text{:name => "expiring date", :placeholder => "--", :value => ""}/
+          %input.input-text{name: "expiring date", placeholder: "--", value: ""}/
           -# = f.text_field :
           -# spanはform_for切り替え時にセレクトの横に移動すると思います
           %span 年
@@ -48,7 +48,7 @@
           %h4 セキュリティコード
           -# = f.label :"セキュリティコード"
           %span.min #{required}
-          %input.input-text_cardnum{:name => "security code", :placeholder => "カード背面４桁もしくは３桁の番号", :value => ""}/
+          %input.input-text_cardnum{name: "security code", placeholder: "カード背面４桁もしくは３桁の番号", value: ""}/
         -# .field-input
           -# = f.text_field : ,placeholder: 'カード背面４桁もしくは３桁の番号'
       .field-creditcard
@@ -59,13 +59,3 @@
   = render "sidebar"
 
 = render "/homes/footer"
-
-
-
-
-
-
-
-
-
-
