--- a/app/views/homes/_footer.html.haml
+++ b/app/views/homes/_footer.html.haml
@@ -24,8 +24,8 @@
                         XXXXXX
 
         .FooterBottom
-            .footer-logo
+            .FooterBottom__footer-logo
             
-                %span.footer-text 
-                    © 2019 Fmarket
+            .FooterBottom__footer-text 
+                © 2019 Fmarket
 
