--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,29 +11,37 @@
 
 //mypages
 @import "mypages/sidebar";
-
-// 各コントローラー
-@import "homes/home";
 @import "mypages/mypage";
 @import "mypages/edit";
 @import "mypages/logout";
 @import "mypages/sidebar";
 @import "mypages/creditcard.scss";
+@import "mypages/identification";
+
+//signupus
 @import "signups/signup.scss";
 @import "signups/step1.scss";
 @import "signups/step2.scss";
+@import "signups/done.scss";
+@import "signups/header.scss";
+@import "signups/index.scss";
+@import "signups/footer.scss";
+@import "signups/step1.scss";
+
+//addresses
+@import "addresses/new.scss";
+
+//devise
+@import "devise/sessions/new";
+
+//creditcards
+@import "creditcards/new.scss";
+
+//homes
+@import "homes/home";
+
+//orders
+@import "orders/new.scss";
+
+//その他
 @import "shard/signups_errors";
-@import 'addresses/new.scss';
-@import 'creditcards/new.scss';
-@import 'signups/done.scss';
-@import 'signups/header.scss';
-@import 'signups/index.scss';
-@import 'addresses/new.scss';
-@import 'devise/sessions/new';
-@import 'devise/sessions/new';
-@import 'signups/footer.scss';
-@import 'signups/step1.scss';
-@import 'addresses/new.scss';
-@import 'creditcards/new.scss';
-@import "mypages/identification";
-@import "signups/signup.scss"
