--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "mypages/sidebar";
 @import "mypages/creditcard.scss";
 @import "mypages/identification";
+@import "mypages/listings.scss";
 
 //signupus
 @import "signups/signup.scss";
