--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import "mypages/creditcard.scss";
 @import "mypages/identification";
 @import "mypages/listings.scss";
+@import "mypages/purchase_purchased.scss";
 
 //signupus
 @import "signups/signup.scss";
