--- a/app/assets/stylesheets/mypages/purchase_purchased.scss
+++ b/app/assets/stylesheets/mypages/purchase_purchased.scss
@@ -1,10 +1,10 @@
-.mypage-container__listings {
+.mypage-container__purchase {
   width: 43.5rem;
   box-sizing: border-box;
   float: right;
 }
 
-.listings-product {
+.purchase-product {
   height: 4.47rem;
   background-color: #fafafa;
   padding: 0 1rem;
@@ -13,26 +13,26 @@
   line-height: 4.47rem;
 }
 
-.listings-tabs {
+.purchase-tabs {
   width: 43.5rem;
   height: 0.12rem;
   box-sizing: border-box;
   display: flex;
 
   &__active {
-    width: calc(100% / 3);
+    width: 50%;
     height: 0.12rem;
     background-color: #ea532d;
   }
 
   &__post {
-    width: 33.33333%;
+    width: 50%;
     height: 0.12rem;
     background-color: #eee;
   }
 }
 
-.listings-detail {
+.purchase-detail {
   height: 4.47rem;
   width: 43.5rem;
   display: flex;
@@ -40,7 +40,7 @@
 
   &__active {
     height: 4.47rem;
-    width: 33.33333%;
+    width: 50%;
     font-size: 1.12rem;
     font-weight: bold;
     color: #333333;
@@ -56,7 +56,7 @@
 
   &__post {
     height: 4.47rem;
-    width: 33.33333%;
+    width: 50%;
     font-size: 1.12rem;
     font-weight: bold;
     color: #333333;
@@ -71,7 +71,7 @@
   }
 }
 
-.listings-report-areas-none {
+.purchase-report-areas-none {
   height: 14.6rem;
   width: 43.5rem;
   font-size: 1.12rem;
@@ -91,7 +91,7 @@
   }
 }
 
-.listings-report-areas-exsis {
+.purchase-report-areas-exsis {
   height: 4.47rem;
   width: 43.5rem;
   background-color: #fff;
@@ -142,7 +142,7 @@
               margin-left: 0.3rem;
             }
 
-            .listings__selling_status {
+            .purchase__selling_status {
               background-color: #0099e8;
               color: #fff;
               font-size: 0.8rem;
@@ -151,8 +151,15 @@
               margin: 0 0 0 auto;
               padding: 0.2rem;
             }
+
             .listings__selling_status-sold {
               background-color: #808080;
+              color: #fff;
+              font-size: 0.8rem;
+              font-weight: bolder;
+              border-radius: 0.2rem;
+              margin: 0 0 0 auto;
+              padding: 0.2rem;
             }
           }
         }
@@ -166,7 +173,6 @@
       }
     }
   }
-
   &__area:hover {
     background-color: #f5f5f5;
   }
