--- a/app/views/mypages/_listings.html.haml
+++ b/app/views/mypages/_listings.html.haml
@@ -56,26 +56,33 @@
             .listings-report-areas-exsis__area__link__item__detail
               %span.listings-report-areas-exsis__area__link__item__detail__icon
                 %i.far.fa-heart
-                %span.listings__likes-count 0
+                %span.listings__likes-count
+                  0
 
                 %i.far.fa-comment-alt
-                %span.listings__chates-count 0
-                %span.listings__selling_status 出品中
+                %span.listings__chates-count
+                  0
+                %span.listings__selling_status
+                  出品中
 
-          - if url.match(/\/listings\/.*in_progress.*/)
+          - if url.match(/\/listings\/.*in_proress.*/)
             .listings-report-areas-exsis__area__link__item__detail
               %span.listings-report-areas-exsis__area__link__item__detail__icon
                 %i.far.fa-heart
-                %span.listings__likes-count 0
+                %span.listings__likes-count
+                  0
 
                 %i.far.fa-comment-alt
-                %span.listings__chates-count 0
-                %span.listings__selling_status 取引中
+                %span.listings__chates-count
+                  0
+                %span.listings__selling_status
+                  取引中
 
 
           - if url.match(/\/listings\/.*completed.*/)
             .listings-report-areas-exsis__area__link__item__detail
               %span.listings-report-areas-exsis__area__link__item__detail__icon
-                %span.listings__selling_status.listings__selling_status-sold 売却済み
+                %span.listings__selling_status.listings__selling_status-sold
+                  売却済み
 
       %i.fas.fa-angle-right.listings-report-areas-exsis__area__link__sngle-left
