root-font-sizeを変更 16px→10px

--- a/app/assets/stylesheets/config/reset.scss
+++ b/app/assets/stylesheets/config/reset.scss
@@ -8,7 +8,8 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
- html {
+html {
+  font-size: 62.5%;
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -21,6 +22,7 @@
  */
 
 body {
+  font-size: 1.6rem;
   margin: 0;
 }
 
@@ -174,7 +176,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -184,7 +187,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
